<resources>
    <string name="app_name">Routines</string>

    <!-- onboarding -->
    <string name="onboard_welcome_title_00">Welcome!</string>
    <string name="onboard_welcome_01">\nYou installed Routines because:\n\n\n\n
     &#9999; You want to set new or change your habits \n
     &#9999; You want to change the pace of your life.\n
     &#9999; You want to drive a change within yourself.\n
        &#9999; Perhaps you are just curious about yourself.\n\n\n
        Is this you?\n</string>
    <string name="onboard_welcome_02">
        Great! Lets get started by establishing the most important
    task of the day:\n\n The Morning Planner.\n\n

         Are you ready?
    </string>

    <string name="onboard_title_03">Planing</string>
    <string name="onboard_welcome_03">

        “An intelligent plan is the first step to success. The man who plans knows where he is going, knows what progress he is making and has a pretty good idea when he will arrive.”
– Basil S. Walsh\n\n\n

        Planning your day is the most important habit to develop because it is a an opportunity for you to measure the effectiveness of all of your other habits as well as the
        ability to develop new habits. In other words, if you are having difficulty establishing this morning habit, there is a very high probability that you will have difficulty changing
        other habits as well. To be effective you must develop this habit first. Lets practise once by checking your Notifications.

    </string>
    <string name="onboard_welcome_04">
        Every morning Routines will remind you to plan your day. It will help you along by pre-scheduling tasks for you. With your help Routines can learn to schedule tasks better for you over time.
        You have the option to approve the task list, or modify it by changing the task order or by scheduling or removing tasks. These options are available to you anytime. Remember that planning your day is
        the most important task of the day so if you are a stubborn person when it comes to Notifications, it is a wise choice to make this notification persistent.\n\n
        Are you Stubborn?

    </string>

    <string name="onboard_choice_01_04">I\'m Stubborn</string>
    <string name="onboard_choice_02_04">I prefer to dismiss Notifications</string>
    <string name="onboard_welcome_06"></string>

    <string name="onboard_continue">Yes</string>

    <string name="onboard_welcome_10"></string>

    <string name="onboard_welcome_11">Are you ready? </string>
    <string name="onboard_ready">I\'m ready</string>


    <string name="onboard_welcome_12">Think of Routines as a tool to help you manage your habits.
        It is not just a habit tracker but a tool that can help you change if you
    really want it. Remember this tip well: \n <b>Do not rely on this app, or any other app for that manner, to change
        things for you. You must drive your own change.</b> \n

    </string>

    <string name="onboard_welcome_13">
        To use this app effectively, it is important
    </string>



    <string name="onboard_welcome_text_01">All majestic trees are born from tiny little seeds.</string>
    <string name="onboard_welcome_text_02">By getting started, you have picked up your seed and shovel. </string>
    <string name="onboard_welcome_text_03">Now lets plant that seed.</string>
    <string name="onboard_welcome_text_04">The first and most important task of the day is proper planning. Lets try it.\n (Check your Notifications)</string>
    <string name="onboard_welcome_text_05">You have just watered your new seed. Do not neglect it or it will never grow.   </string>
    <string name="onboard_wake_up_text">I wake up at:</string>
    <string name="onboard_sleep_text">I sleep at:</string>
    <string name="onboard_default_text">Pick:</string>
    <string name="onboard_seed">"Great! Your first daily task, the most important task, is to plan your day. Let's do a test run. "</string>
    <string name="info_oops_string">We made an oopsy! Try again?</string>
    <string name="info_argument_key">info_text</string>

    <!-- onboard pillars -->

    <string name="pillars_title">The Pillars of Life</string>

    <string name="pillars_description"> As you progress through the app, you should ideally balance out the Pillars of your Life. For now, choose one area of your life on which to improve
     upon. </string>
    <string name="pillar_suggestion_description">Here are some suggestions. You can always create your own as by clicking Add. Remember that
    these are habits aimed at improving your life. Specific tasks are more actionable and are easier to turn into habits </string>

    <string name="pillar_mental">Mental</string>
    <string name="pillar_physical">Physical</string>
    <string name="pillar_relationships">Relationships</string>
    <string name="pillar_recreational">Play</string>
    <string name="pillar_work">Work Life</string>
    <string name="pillar_other">Other</string>
    <string name="task_add">Add + </string>

</resources>

